CH revised ch2 of Guidelines

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -7,22 +7,21 @@ Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisio
 obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilibrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. Because allee effects are rarely detected for Pacific salmon (but see Chen), a biological basis for serious harm is usually difficult to identify.
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002a]. Because allee effects are infrequent observed among marine fish species [@keithPopulationDynamicsMarine2012] and rarely detected for Pacific salmon (but see @cunninghamSizeSelectivityPredation2013), a biological basis for serious harm is often difficult to identify. 
 
-LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--CH omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
-
+Furthermore, the definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided. Also, this definition mentions possible impacts on other ecosystem components. Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986].
 
 For Pacific salmon, Canada's Wild Salmon Policy, WSP, is DFO's implementation of the Precautionary Approach Framework for Pacific salmon and informs the development of LRPs. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
 
 Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers.  Portfolio effects have been established for numerous salmon stocks, defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying CU structure and associated biodiversity [@pricePortfolioSimplificationArising2021a].
 
-Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). <!--CH: I drafted text to address Sue's point. However it introduces complexities that are not highly relevant to our goals, and I'm considering omitting. Thoughts?  I could just mention in the presentation "Due to the differences in metrics of status used by WSP and COSEWIC, buffers have been challenging to identify and in practice red status from WSP assessments tends to align with threatened or endangered designations by COSEWIC."-->One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
+Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
 
 
 <!--KH: May be worth explicitly stating in the above paragraph that LRPs under the Precautionary Approach are analagous to the lower benchmark at the CU-scale. --> 
 
 
-Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single metrics<!-- KH: though single-metric approaches in which spawning biomass is compared a single abundance-based benchmark, have been used as proxies ....-->, spawning abundances relative to abundance-based benchmarks have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and within (e.g., Barkley sockeye salmon [@chaputConsiderationsDefiningReference2012] and Skeena River sockeye salmon (C. Carr-Harris pers. com.). 
+Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). 
 <!-- KH: could consider moving this above paragraph to the below section on "Review of Reference Points for Pacific Salmon" since it gets a bit further into reviewing literature?  -->
 
 <!--At present, this section provides a good background how LRPs and WSP benchmarks link to Canadian Fisheries Policy.  However, it doesn't explicitly describe the motivation for this work as is suggested by the title. Maybe you could move the following paragraph from below up here to address this?
@@ -70,13 +69,11 @@ uncertainties arising from missing or limited CU-level data. (See \ref(recommend
 Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in data availability and modelling approaches for assessments. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. in prep). <!--CH: add marentette et al. in prep  to zotero,--> 
 
 
-
-
 ## Scope of Working Paper
 
 A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. The application of the LRP methods are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
 
-While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stock provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stock provisions is beyond our scope, but is a gap that warrants further discussion.  We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stock provisions.
+While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stock provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stock provisions is beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs below. We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stock provisions.
 
 Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes, a full review and evaluation of impacts of time-varying parameters on LRPs is beyond our scope though is an important area of future research.
 
