--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -227,6 +227,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\RTA7HFVR\\Cook et al. - Framework Assessment of the Offshore American Lobs.pdf}
 }
 
+@article{cunninghamSizeSelectivityPredation2013,
+  title = {Size {{Selectivity}} of {{Predation}} by {{Brown Bears Depends}} on the {{Density}} of {{Their Sockeye Salmon Prey}}},
+  author = {Cunningham, Curry J. and Ruggerone, Gregory T. and Quinn, Thomas P.},
+  year = {2013},
+  month = may,
+  journal = {The American Naturalist},
+  volume = {181},
+  number = {5},
+  pages = {663--673},
+  issn = {0003-0147, 1537-5323},
+  doi = {10.1086/670026},
+  abstract = {Can variation in prey density drive changes in the intensity or direction of selective predation in natural systems? Despite ample evidence of density-dependent selection, the influence of prey density on predatory selection patterns has seldom been investigated empirically. We used 20 years of field data on brown bears (Ursus arctos) foraging on sockeye salmon (Oncorhynchus nerka) in Alaska, to test the hypothesis that salmon density affects the strength of sizeselective predation. Measurements from 41,240 individual salmon were used to calculate variance-standardized selection differentials describing the direction and magnitude of selection. Across the time series, the intensity of predatory selection was inversely correlated with salmon density; greater selection for smaller salmon occurred at low salmon densities as bears' tendency to kill larger-than-average salmon was magnified. This novel connection between density dependence and selective predation runs contrary to some aspects of optimal foraging theory and differs from many observations of density-dependent selection because (1) the direction of selection remains constant while its magnitude changes as a function of density and (2) stronger selection is observed at low abundance. These findings indicate that sockeye salmon may be subject to fishery-induced size selection from both direct mechanisms and latent effects of altered predatory selection patterns on the spawning grounds, resulting from reduced salmon abundance.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\Q5YDV545\\Cunningham et al. - 2013 - Size Selectivity of Predation by Brown Bears Depen.pdf}
+}
+
 @article{defilippoImprovingShorttermRecruitment2021,
   title = {Improving Short-Term Recruitment Forecasts for Coho Salmon Using a Spatiotemporal Integrated Population Model},
   author = {DeFilippo, Lukas B. and Buehrens, Thomas W. and Scheuerell, Mark and Kendall, Neala W. and Schindler, Daniel E.},
@@ -461,6 +477,13 @@
   pages = {86--91}
 }
 
+@book{hilbornQuantitativeFisheriesStock1986,
+  title = {Quantitative {{Fisheries Stock Assessment}}},
+  author = {Hilborn, R and Walters, C},
+  year = {1986},
+  publisher = {{Springer Science}}
+}
+
 @techreport{holtbyConservationUnitsPacific2007,
   type = {Research {{Document}}},
   title = {Conservation {{Units}} for {{Pacific Salmon}} under the {{Wild Salmon Policy}}},
@@ -531,6 +554,23 @@
   langid = {english},
   annotation = {OCLC: 1260853250},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\CP4BKWWZ\\Huang et al. - 2021 - Recovery potential assessment for Fraser River Soc.pdf}
+}
+
+@article{keithPopulationDynamicsMarine2012,
+  title = {Population Dynamics of Marine Fishes at Low Abundance},
+  author = {Keith, David M. and Hutchings, Jeffrey A.},
+  editor = {Hilborn, Ray},
+  year = {2012},
+  month = jul,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {69},
+  number = {7},
+  pages = {1150--1163},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/f2012-055},
+  abstract = {The recovery of depleted species depends on their population dynamics at low abundance. Classical population growth models, applied widely in fisheries science, assume that per capita offspring production increases as abundance declines (compensation). However, slow or absent recovery by many depleted fishes might reflect unexpectedly weak compensation or the presence of Allee effects (depensation). Using meta-analytical techniques to describe reproductive dynamics, we find considerable variability among 207 exploited marine fish stocks (104 species) in how standardized per capita population growth changes with abundance. Although many species exhibit strong compensatory dynamics (negative density dependence), others show much weaker compensation than expected, and some exhibit evidence of an Allee effect, such as Atlantic cod (Gadus morhua) and Alaskan walleye pollock (Theragra chalcogramma). As data at low levels of abundance become increasingly available, it appears that compensation, while strong in some species, is comparatively weak or nonexistent in others, thus providing an explanation for why the recovery of some depleted stocks, despite reductions in exploitation, has been considerably less than what classic models of population growth would otherwise suggest.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\D2QMSZJ7\\Keith and Hutchings - 2012 - Population dynamics of marine fishes at low abunda.pdf}
 }
 
 @article{kronlundConsiderationsDesignRebuilding2021,
