--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -18,19 +18,14 @@ Differences in adaptive traits among CUs results in diversity in CU-level respon
 Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
 
 
-<!--KH: May be worth explicitly stating in the above paragraph that LRPs under the Precautionary Approach are analagous to the lower benchmark at the CU-scale. --> 
-
-
-Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). 
-<!-- KH: could consider moving this above paragraph to the below section on "Review of Reference Points for Pacific Salmon" since it gets a bit further into reviewing literature?  -->
-
-<!--At present, this section provides a good background how LRPs and WSP benchmarks link to Canadian Fisheries Policy.  However, it doesn't explicitly describe the motivation for this work as is suggested by the title. Maybe you could move the following paragraph from below up here to address this?
+<!--KH addition below-->
 
 Although the traditional application of the precautionary approach for the management of Pacific salmon has been focused on setting lower management benchmarks for individual salmon CUs [dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower management benchmarks. The present work expands on the previous work by providing guidance on establishing LRPs for management of Pacific salmon SMUs. 
 
+<!--CH: where should I put this next sentence?-->
+Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate status represented by WSP benchmarks across component CUs to the scale of SMUs. 
 
 
--->
 
 
 ## Review of Reference Points for Pacific Salmon
@@ -44,6 +39,11 @@ For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs an
 
 
 Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to marine fisheries. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab in Canada, where data on CPUE, egg clutches and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. For Pacific salmon, the multidimensional assessment approach introduced by (Pestal et al.) is used to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs (Holt et al. in review). 
+
+<!--CH next pgh inserted here. as per KH's suggestion Does it fit?-->
+Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). 
+
+
 
 Although the application of the precautionary approach for the management of Pacific salmon has focused on setting biological benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision creates the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the risk of component CUs dropping below their lower benchmarks. The present work expands on the previous work on biological benchmarks for Pacific salmon by providing guidance on establishing LRPs for Pacific salmon SMUs. 
 
